# data-vault

./: .gitignore  README.md  pyproject.toml
collections/: README.md  collections.json
collections/data_gov/: README.md
data/: README.md
scripts/: cli.py
scripts/collection/: __init__.py  cloudflare_tools.py  render.py  s3.py  s3_tools.py  sync.py  verify_upload.py  write_metadata.py
scripts/data_gov/: fetch_data.py  fetch_index.py  fetch_jsonl.py  helpers.py  migrate.py  models.py
scripts/data_gov/diff/: diff.py  diff_analyze.py
scripts/github/: download_git.py
scripts/helpers/: bag.py  config.py  misc.py  onepassword.py  parallel.py
scripts/usda/: fetch.py
